--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=gymmonitor-lite
+
+# Datasource configuration
+# These variables should be loaded from a .env file in this directory
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${PG_USER}
+spring.datasource.password=${PG_PASSWORD}
+
+# Automatically update DB schema on app startup
+spring.jpa.hibernate.ddl-auto=update
+# Tell Hibernate we're using PostgreSQL
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
