--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.datasource.password=${PG_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 # Tell Hibernate we're using PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+app.jwtSecret=${APP_JWT_SECRET}
+app.jwtExpirationMs=${APP_JWT_EXPIRATION_MS}
