enabled Spring Security debug logging for better troubleshooting

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 app.jwtSecret=${APP_JWT_SECRET}
 app.jwtExpirationMs=${APP_JWT_EXPIRATION_MS}
+
+logging.level.org.springframework.security=DEBUG
