created data.sql to prepopulate demo data and configured app to recreate schema on startup
Instead of saving data inbetween app startup/closes, the database now gets refreshed and populated with this set of demo data. In the demo data, club with id 1 is the most populated, and user with id 3 is the member with the most booking history. Also includes a gym class (id 14) at max capacity, and more.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,20 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${PG_USER}
 spring.datasource.password=${PG_PASSWORD}
 
-# Automatically update DB schema on app startup
-spring.jpa.hibernate.ddl-auto=update
+# Database settings, set to recreate the database each run and load the initial data from data.sql afterwards
+# Drop and recreate the database schema on each startup, and drop it again when the app stops
+spring.jpa.hibernate.ddl-auto=create-drop
+# Delays running data.sql until after Hibernate finishes.
+spring.jpa.defer-datasource-initialization=true
+# Run SQL init scripts (in this case, data.sql) on startup
+spring.sql.init.mode=always
+
 # Tell Hibernate we're using PostgreSQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+# JWT secret key and token expiration time, used for authentication tokens (values set in environment variable)
 app.jwtSecret=${APP_JWT_SECRET}
 app.jwtExpirationMs=${APP_JWT_EXPIRATION_MS}
 
+# Enable debug logging for Spring Security
 logging.level.org.springframework.security=DEBUG
